# telegram-adapter

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/telegram_adapter/: app.py  utils.py
src/telegram_adapter/config/: logging.py  logs.py  settings.py
tests/: test_app.py  test_settings.py
